   [SW].
 * Better error reporting in logs and event hooks on failed email
   registration. Suggested by Padriac. [SW]
 * @decompile <exit> now reports the exit's source room. Suggested by
   telandra2. [MG]
 * You now only need to control an object to change its zone, or to use it
   as a zone. Previously, ownership was required. Suggested by Cheetah. [MG]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]
 * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
 * lmath(and,) returned 1 instead of 0. Reported by Padriac. [SW].
 * Mixing old-style ansi colors and xterm colors was broken. [MG]
 * Players who couldn't see xterm colors would sometimes get a highlighted
   foreground color by mistake. [MG]
 * colors(<old-style-ansi>, hex) and colors(*, 16color) were broken. 
   Reported by Kimiko. [MG]
 * ANSI highlight would sometimes bleed when xterm colors were downgraded to
   the basic 16-color ANSI palette. Reported by Kimiko. [MG]
 * @entrances didn't correctly report the source of an exit. Reported by
   spork. [MG]
 * Fix a crashbug in @command/delete. [MG]
 
Hardcode:
 * The Builder() macro, which is unused in Penn but exists for backwards
   compatability, used command_check_byname(), which spammed people who
   could not build with "Permission denied." errors. It is now spam-free.
   By spork.

Version 1.8.5 patchlevel 3                                 Aug 23, 2012

Fixes:
 * Fix a crash bug in new color code. Discovered by ChaosMageX, fixed by
   Intrevis and [SW].

Functions:
 * name() with no arguments is now an error. It should always have been, but
   previously returned nothing for backwards compatability. If you still have
   code that relies on that behaviour, you are extremely lazy and should be
   ashamed of yourself. [MG]
